delete function added

--- a/partial/table.html
+++ b/partial/table.html
@@ -16,7 +16,7 @@
       <td>{{employee.id}}</td>
       <td><a href="#/edit/{{employee.id}}">{{employee.name}}</a></td>
       <td>{{employee.address}}</td>
-      <td><a href="#">delete</a></td>
+      <td><a href="#/delete/{{employee.id}}">delete</a></td>
     </tr>
   </tbody>
 </table>
